Feat/265 url param instantiation (#1068)
* added endpoint to set session values in HomeController

* Added url encoding and CSP with nonce for inline scripts

* implemented IValidateQueryParamPrefill.cs to allow service owners to implement validation for query params

* added tests for HomeController

* improved AppResourcesMock.cs to make all tests run

* Use [ImplementableByApps] and AppImplementationFactory for IValidadateQueryParamPrefill
* Change Interface to return `ValidationIssue` instead of throwing exception
* Remove NullQueryParamPrefillValidator (adds no value)
* Make IValidateQueryParamPrefill.PrefillFromQueryParamsIsValid return bool
* Don't use Newtonsoft.Json (1 json library should be enough)
* Use Moq instead of custom AppResourcesMock
* Add tests for failing validation and successfull validation

---------
