# src/Altinn.App.Api/Controllers/HomeController.cs
@@ -1,4 +1,5 @@
 using System.Text.Json;
+using System.Text.Json.Serialization;
 using System.Web;
 using Altinn.App.Core.Configuration;
 using Altinn.App.Core.Internal.App;
@@ -105,6 +106,93 @@ public class HomeController : Controller
         }
 
         return Redirect(redirectUrl);
+    }
+
+    /// <summary>
+    ///
+    /// </summary>
+    /// <param name="DataModelName"></param>
+    /// <param name="AppId"></param>
+    /// <param name="PrefillFields"></param>
+    public record QueryParamInit(
+        [property: JsonPropertyName("dataModelName")] string DataModelName,
+        [property: JsonPropertyName("appId")] string AppId,
+        [property: JsonPropertyName("prefillFields")] Dictionary<string, string> PrefillFields
+    );
+
+    /// <summary>
+    /// Sets query parameters in frontend session storage for later use in prefill of stateless apps
+    /// </summary>
+    /// <remarks>
+    /// Only parameters specified in [dataTypeId].prefill.json will be accepted.
+    /// Returns an HTML document with a small javascript that will set session variables in frontend and redirect to the app.
+    /// </remarks>
+    [HttpGet]
+    [ProducesResponseType(typeof(ProblemDetails), StatusCodes.Status400BadRequest)]
+    [Route("{org}/{app}/set-query-params")]
+    public async Task<IActionResult> SetQueryParams(string org, string app)
+    {
+        ApplicationMetadata application = await _appMetadata.GetApplicationMetadata();
+        if (!IsStatelessApp(application))
+        {
+            return BadRequest("You can only use query params with a stateless task.");
+        }
+
+        var prefillData = new List<QueryParamInit>();
+
+        foreach (var dataType in application.DataTypes)
+        {
+            var prefillJson = _appResources.GetPrefillJson(dataType.Id);
+            if (prefillJson is null)
+                continue;
+            using var jsonDoc = JsonDocument.Parse(prefillJson);
+            if (!jsonDoc.RootElement.TryGetProperty("QueryParameters", out var allowedQueryParams))
+                continue;
+            if (allowedQueryParams.ValueKind != JsonValueKind.Object)
+                throw new Exception($"Invalid {dataType.Id}.prefill.json, \"QueryParameters\" must be an object.");
+
+            var prefillForType = allowedQueryParams
+                .EnumerateObject()
+                .Where(param => Request.Query.ContainsKey(param.Name))
+                .ToDictionary(param => param.Value.ToString(), param => Request.Query[param.Name].ToString());
+
+            if (prefillForType.Count > 0)
+            {
+                prefillData.Add(new QueryParamInit(dataType.Id, application.Id, prefillForType));
+            }
+        }
+
+        if (prefillData.Count == 0)
+        {
+            return BadRequest("Found no valid query params.");
+        }
+
+        string nonce = Convert.ToBase64String(System.Security.Cryptography.RandomNumberGenerator.GetBytes(16));
+
+        var htmlContent = $$"""
+            <!DOCTYPE html>
+            <html lang='en'>
+            <head>
+                <meta charset='UTF-8'>
+                <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+                <title>Set Query Params</title>
+            </head>
+            <body>
+                <script nonce='{{nonce}}'>
+                  const prefillData = {{JsonSerializer.Serialize(prefillData)}}.map(entry => ({
+                            ...entry,
+                            created: new Date().toISOString()
+                        }));
+                    sessionStorage.setItem('queryParams', JSON.stringify(prefillData));
+                    window.location.href = `${window.location.origin}/{{application.AppIdentifier.Org}}/{{application.AppIdentifier.App}}`;
+                </script>
+            </body>
+            </html>
+            """;
+
+        Response.Headers["Content-Security-Policy"] = $"default-src 'self'; script-src 'nonce-{nonce}';";
+
+        return Content(htmlContent, "text/html");
     }
 
     private async Task<bool> ShouldShowAppView()
